crates/biome_js_analyze/tests/specs/nursery/noRedundantDefaultExport/invalid/import_binding.js
import foo from "./other";
export { foo };
export default foo;